<resources>
    <string name="app_name">Go2Life</string>
    <string name="find_best_j">FIND BEST JOB SEEKERS</string>
    <string name="loarem">Lorem Ipsum is simply dummy text of the \nprinting and typesetting industry. Lorem Ipsum \nhas been the industry\'s standard dummy</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_or_business_name">Name or Business Name</string>
    <string name="terms"><![CDATA[I accept all Terms & Conditions]]></string>
    <string name="Login">Don\'t have any account ? Login</string>
    <string name="john_smith">John Smith</string>
    <string name="welcome_to">Welcome to</string>
    <string name="post_code">Post Code</string>
    <string name="are_you_currently_seeking_work">Are you currently seeking work?</string>
    <string name="yes_i_am_seeking_work">Yes, I am seeking work</string>
    <string name="company">Add your profile picture or \ncompany logo !</string>
    <string name="add_photo">Add Photo</string>
    <string name="job_title">Job Title</string>
    <string name="are_you_a_student">Are you a student ?</string>
    <string name="company_name">Company Name</string>
    <string name="don_t_have_any_account_sign_up">Don\'t have any account ? Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="marketplace">Market</string>
    <string name="jobs">Jobs</string>
    <string name="reels">Reels</string>
    <string name="chats">Chats</string>
    <string name="more">More</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_country_region">Select Country/Region</string>
    <string name="no_this_is_a_business_profile">No, this is a business profile</string>
    <string name="city">City</string>
    <string name="kyranew_smi">Kyranew Smith</string>
    <string name="kyranew_smi2">Mohali , Chandigarh</string>
    <string name="kyranew_smi3">3h ago</string>
    <string name="some_id">12</string>
    <string name="profile">Profile</string>
    <string name="my_courses">My Courses</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="cv_templates">CV Templates</string>
    <string name="my_jobs">My Jobs</string>
    <string name="my_products">My Products</string>
    <string name="membership">Membership</string>
    <string name="profession_skills"><![CDATA[Profession & Skills]]></string>
    <string name="history">History</string>
    <string name="connections">Connections</string>
    <string name="blocked">Blocked</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="sofa_set_and_chairs">Sofa Set And Chairs</string>
    <string name="furniture">Furniture</string>
    <string name="_358_00">£358.00</string>
    <string name="search">Search</string>
    <string name="see_detail">See Detail</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="sadipscing_elitr_sed_diam_nonumy_eirmod_tempor_invidunt_ut_labore_et_dolore">sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore</string>
    <string name="your_comment">Your Comment....</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="comment_here">Comment here...</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="camera_permission_denied_message">Camera permission is required to access the camera feature. Please grant the permission in the app settings.</string>
    <string name="storage_permission_denied_message">Storage permission is required to access the Storage feature. Please grant the permission in the app settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="camera_permission_rationale">Camera permission is required to take photos and videos. Please grant the permission to proceed.</string>
    <string name="storage_permission_rationale">Storage permission is required to use photos and videos. Please grant the permission to proceed.</string>
    <string name="record">Record</string>
    <string name="retake">Retake</string>
    <string name="use_video">Use Video</string>
    <string name="_90_00">00:90</string>

</resources>