<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="20dp" />

                <ImageView
                    android:id="@+id/ivLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="@{onClick}"
                    android:background="@drawable/seeking_back"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textColor="#515151"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/ivLogin"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toEndOf="@id/ivLogin"
                    app:layout_constraintTop_toTopOf="@id/ivLogin" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tvForgot"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/job_img1"
                    android:text="@string/terms"
                    android:textAppearance="@style/forgot_pass"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAddPhoto"
                    android:layout_width="161dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="27dp"
                    android:padding="10dp"
                    android:background="@drawable/gradient_bg"
                    android:fontFamily="@font/poppins_regular"
                    android:onClick="@{onClick}"
                    android:text="@string/add_photo"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvForgot" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/job_title"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/btnAddPhoto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvStudent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/are_you_a_student"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etStudent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="147dp"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/gradient_bg"
                    android:fontFamily="@font/poppins_regular"
                    android:onClick="@{onClick}"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="@id/glStart"
                    app:layout_constraintRight_toRightOf="@id/glEnd"
                    app:layout_constraintTop_toBottomOf="@id/tvStudent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>