<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="20dp" />

                <ImageView
                    android:id="@+id/ivLogin"
                    android:layout_width="370dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/go2life"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvWelcome2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:lineHeight="36dp"
                    android:text="@string/john_smith"
                    android:textColor="#666666"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/ivLogin" />


                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/welcome_to"
                    android:textAppearance="@style/welcome_bac"
                    android:textSize="40sp"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvWelcome2" />

                <ImageView
                    android:id="@+id/tvWelcome3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sign_up"
                    android:textAppearance="@style/welcome_bac"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="59dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginTop="30dp"
                    android:hint="@string/select_country_region"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvWelcome3">


                        <AutoCompleteTextView
                            android:id="@+id/my_spinner_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:inputType="none"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/post_code"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="59dp"
                    android:layout_marginTop="30dp"
                    android:hint="@string/city"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvName">

                     <AutoCompleteTextView
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:inputType="none"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="67dp"
                    android:background="@drawable/gradient_bg"
                    android:fontFamily="@font/poppins_regular"
                    android:onClick="@{onClick}"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="@id/glStart"
                    app:layout_constraintRight_toRightOf="@id/glEnd"
                    app:layout_constraintTop_toBottomOf="@id/tvEmail" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>