<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="20dp" />

                <ImageView
                    android:id="@+id/ivLogin"
                    android:layout_width="370dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/go2life"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:id="@+id/rlWelcome"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="vertical"
                    android:textAppearance="@style/welcome_bac"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/ivLogin">

                    <TextView
                        android:id="@+id/tvWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textAppearance="@style/welcome_bac"
                        android:textSize="30sp" />

                    <View
                        android:id="@+id/rectangle_4"
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:background="@drawable/red_line"
                        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/username"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/rlWelcome">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUser"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/name_or_business_name"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvUser">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvMobile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/mobile_number"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMobile"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvMobile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:inputType="textVisiblePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/tvTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:buttonTint="#6246E8"
                    android:text="@string/terms"
                    android:textAppearance="@style/forgot_pass"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="67dp"
                    android:background="@drawable/gradient_bg"
                    android:fontFamily="@font/poppins_regular"
                    android:onClick="@{onClick}"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="@id/glStart"
                    app:layout_constraintRight_toRightOf="@id/glEnd"
                    app:layout_constraintTop_toBottomOf="@id/tvTerms" />

                <TextView
                    android:id="@+id/tvLoginWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Or login with"
                    android:textColor="#666666"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin" />

                <RelativeLayout
                    android:id="@+id/rlSocialLogin"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/tvLoginWith">

                    <ImageView
                        android:id="@+id/googleSocial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/google" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/Login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintTop_toBottomOf="@id/rlSocialLogin" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>